--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>
-            burası başlık
+            nebufun sitesi
 </title>
     </head>
     <body>
-ilk web sayfamız
+nebuf
     </body>
 </html>
