--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>
-            nebufun sitesi
-</title>
+SEDAT
+        </title>
     </head>
     <body>
-nebuf
+hoşgeldiniz
     </body>
 </html>
