--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ SEDAT
     </head>
     <body>
 hoşgeldiniz
+         <a href = "https://discord.gg/xtBXpGF"> CACTUSGANG </a> <p/>
     </body>
 </html>
