--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ SEDAT
         </title>
     </head>
     <body>
-hoşgeldiniz
+hoşgeldiniz <p/>
          <a href = "https://discord.gg/xtBXpGF"> CACTUSGANG </a> <p/>
     </body>
 </html>
