--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
         <title>
 SEDAT
         </title>
+       
+
     </head>
-    <body>
-hoşgeldiniz <p/>
-         <a href = "https://discord.gg/xtBXpGF"> CACTUSGANG </a> <p/>
+    <body background = "resimler/rgb.gif" text="white" >
+       <center> <h1> HOŞGELDİNİZ   </h1>             </center>             <p/>
+<hr align ="left" color : "blue" />
+         <a href = "https://discord.gg/xtBXpGF"> <img src= "resimler/discord_icon_logo_remix.png"  style="width:100px;height:50px"> </a> <p/>
     </body>
-</html>
+</html> 
