--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ SEDAT
        
 
     </head>
-    <body background = "resimler.zip/rgb.gif" text="white" >
+    <body background = "resimler/rgb.gif" text="white" >
        <center> <h1> HOŞGELDİNİZ   </h1>             </center>             <p/>
 <hr align ="left" color : "blue" />
-         <a href = "https://discord.gg/xtBXpGF"> <img src= "resimler.zip/discord_icon_logo_remix.png"  style="width:100px;height:50px"> </a> <p/>
+         <a href = "https://discord.gg/xtBXpGF"> <img src= "resimler/discord_icon_logo_remix.png"  style="width:100px;height:50px"> </a> <p/>
     </body>
 </html> 
