--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ SEDAT
        
 
     </head>
-    <body background = "https://wallpaperaccess.com/full/1139904.jpg" text="white" >
+    <body background = "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/1139904.jpg?raw=true" text="white" >
         <pre>   
        
         <center> <h1> HOŞGELDİNİZ   </h1>             </center>             <p/>
