--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <html>
-    <head>
+    <head> <style type="text/css">
+            body
+            {
+                background:url("https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/1139904.jpg?raw=true") 0 0 no-repeat fixed;
+    background-size:cover;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+            }
+            </style>
         <title>
 SEDAT
         </title>
        
 
     </head>
-    <body background = "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/1139904.jpg?raw=true" text="white" >
+    <body text="white" >
         <pre>   
        
         <center> <h1> HOŞGELDİNİZ   </h1>             </center>             <p/>
