--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ SEDAT
    
    
 
-<center> <h1> SEDAT ÇÖRTE   </h1> </center>                             
+<center> <h1><img src= "https://de25-engine.flamingtext.com/netfu/tmp28006/coollogo_com-145401155.gif"  style="width:200px;height:50px"></h1> </center>                             
 <center> <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/Steam_Logo.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://discord.gg/VYedgz"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/discord_icon_logo_remix.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://twitter.com/CorteSedat"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/twitter-logo-png-twitter-logo.png?raw=true"  style="width:50px;height:50px"></a> </center>    
         </pre>
       
