--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ SEDAT
 
 <center> <h1><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/SEDAT.gif?raw=true"  style="width:200px;height:50px"></h1> </center>                             
 <hr width="500">
-<center> <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/Steam_Logo.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://discord.gg/VYedgz"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngegg.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://twitter.com/CorteSedat"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/twitter-logo-png-twitter-logo.png?raw=true"  style="width:50px;height:50px"></a> </center>    
+<center> <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngwing.com.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://discord.gg/VYedgz"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngegg.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://twitter.com/CorteSedat"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/twitter-logo-png-twitter-logo.png?raw=true"  style="width:50px;height:50px"></a> </center>    
 <hr width="500">        
 </pre>
       
