--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ SEDAT
 
 
 <center> <h1><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/SEDAT.gif?raw=true"  style="width:200px;height:50px"></h1> </center>                             
-<hr width="500">
+<hr width="500" color="	#1A237E">
 <center> <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngwing.com.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://discord.gg/VYedgz"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngegg.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://twitter.com/CorteSedat"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/ssd.png?raw=true"  style="width:50px;height:50px"></a> </center>    
-<hr width="500">        
+<hr width="500" color="	#1A237E">        
 </pre>
       
         </body>
