--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head> <style type="text/css">
             body
             {
-                background:url("https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/arkaplann.gif?raw=true") 0 0 no-repeat fixed;
+                background:url("https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/loading.gif?raw=true") 0 0 no-repeat fixed;
     background-size:cover;
     -webkit-background-size:cover;
     -moz-background-size:cover;
