--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ SEDAT
 
 
 <center> <h1><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/SEDAT.gif?raw=true"  style="width:200px;height:50px"></h1> </center>                             
-<center><img src= "resimler/cizgi-hareketli-resim-0015.gif"  style="width:500px;height:3px"></center>   
+<center><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/cizgi-hareketli-resim-0015.gif?raw=true"  style="width:500px;height:3px"></center>   
 <center> <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngwing.com.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://discord.gg/VYedgz"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngegg.png?raw=true"  style="width:50px;height:50px"></a><a href = "https://twitter.com/CorteSedat"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/ssd.png?raw=true"  style="width:50px;height:50px"></a> </center>    
-<center><img src= "resimler/cizgi-hareketli-resim-0015.gif"  style="width:500px;height:3px"></center>         
+<center><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/cizgi-hareketli-resim-0015.gif?raw=true"  style="width:500px;height:3px"></center>         
 </pre>
       
         </body>
