--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
+
 <!DOCTYPE html>
 <html>
-    <head> <style type="text/css">
-            body
-            {
-                background:url("https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/arkapln.gif?raw=true") 0 0 no-repeat fixed;
-    background-size:cover;
-    -webkit-background-size:cover;
-    -moz-background-size:cover;
-    -o-background-size:cover;
-            }
-            </style>
+    <head> <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>
 SEDAT
         </title>
        
 
     </head>
+    <div class="container"></div>
+
     <body text="white" >
         <pre>   
        
