--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ SEDAT
                   <a href="sayfa1.html">Sayfa 1</a>
                 </div>
                 <div class="btn btn_2">
-                  <a href="">Button</a>
+                  <a href="sayfa2.html">Sayfa 2</a>
                 </div>
               </div>	
         <pre>   
