--- a/sayfa2.html
+++ b/sayfa2.html
@@ -1,6 +1,18 @@
-<html>
-<body bgcolor="#ffffcc">
-    <h1> SAYFA 1 </h1>
-    Burası 2. sayfa 
+<html> 
+    <head>
+        <style type="text/css">
+            body
+            {
+                background:url("https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/arkapln.gif?raw=true") 0 0 no-repeat fixed;
+    background-size:cover;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+            }
+            </style>
+   </head>
+<body text="white">
+    <h1> HAKKINDA </h1>
+
 </body>
-</html>
+</html> 
