--- a/sayfa1.html
+++ b/sayfa1.html
@@ -12,7 +12,11 @@
             </style>
    </head>
 <body text="white">
-    <h1> HAKKINDA </h1>
-
+    <h1> İLETİŞİM </h1>
+    <pre> <h2> STEAM : <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngwing.com.png?raw=true"  style="width:50px;height:50px"></a>  </h2>
+        <h2> DİSCORD : <a href = "https://discord.gg/VYedgz"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngegg.png?raw=true"  style="width:50px;height:50px"></a>  </h2>
+        <h2> TWİTTER :<a href = "https://twitter.com/CorteSedat"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/ssd.png?raw=true"  style="width:50px;height:50px"></a>   </h2>
+    </pre>
+    
 </body>
-</html> 
+</html>
