--- a/sayfa1.html
+++ b/sayfa1.html
@@ -13,9 +13,14 @@
    </head>
 <body text="white">
     <h1> İLETİŞİM </h1>
-    <pre> <h2> STEAM : <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngwing.com.png?raw=true"  style="width:50px;height:50px"></a>  </h2>
+    <pre>
+<img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/cizgi-hareketli-resim-0015.gif?raw=true"  style="width:500px;height:3px"> 
+     <h2> STEAM : <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngwing.com.png?raw=true"  style="width:50px;height:50px"></a>  </h2>
+<img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/cizgi-hareketli-resim-0015.gif?raw=true"  style="width:500px;height:3px"> 
         <h2> DİSCORD : <a href = "https://discord.gg/VYedgz"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngegg.png?raw=true"  style="width:50px;height:50px"></a>  </h2>
+<img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/cizgi-hareketli-resim-0015.gif?raw=true"  style="width:500px;height:3px"> 
         <h2> TWİTTER :<a href = "https://twitter.com/CorteSedat"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/ssd.png?raw=true"  style="width:50px;height:50px"></a>   </h2>
+<img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/cizgi-hareketli-resim-0015.gif?raw=true"  style="width:500px;height:3px"> 
     </pre>
     
 </body>
