--- a/sayfa1.html
+++ b/sayfa1.html
@@ -12,7 +12,7 @@
             </style>
    </head>
 <body text="white">
-    <h1> İLETİŞİM </h1>
+ <center>   <h1> İLETİŞİM </h1>  </center>
     <pre>
 <img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/cizgi-hareketli-resim-0015.gif?raw=true"  style="width:500px;height:3px"> 
      <h2> STEAM : <a href = "https://steamcommunity.com/profiles/76561198834218391"><img src= "https://github.com/Sedatcorte/sedatcorte.github.io/blob/master/pngwing.com.png?raw=true"  style="width:50px;height:50px"></a>  </h2>
