--- a/sayfa2.html
+++ b/sayfa2.html
@@ -12,7 +12,7 @@
             </style>
    </head>
 <body text="white">
-    <h1> HAKKINDA </h1>
+  <center>  <h1> HAKKINDA </h1>  </center>
 
 </body>
 </html> 
